// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly 1`] = `
<div>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-exclamation-full"
      >
        <use
          xlink:href="#exclamation-full"
        />
      </svg>
    </span>
    Alert Danger
  </div>
</div>
`;

exports[`Alert renders with close icon correctly 1`] = `
<div>
  <div
    class="alert alert-info alert-dismissible"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-info-circle"
      >
        <use
          xlink:href="#info-circle"
        />
      </svg>
    </span>
    Alert Info
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <svg
        class="lexicon-icon lexicon-icon-times"
      >
        <use
          xlink:href="#times"
        />
      </svg>
    </button>
  </div>
</div>
`;
